bad/assign_var_bool_null.example_compiler_output
ERROR
[1mbad/assign_var_bool_null.lat:5:4: [1;31merror: [0;1massigning to `boolean` from incompatible type `null`[m
	x = null;
	  [1;32m^[m
